# szia-ai-tools

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: README.md  core_functionality_overview.ipynb
examples/rag_chatbot/: simplified_rag_chatbot.ipynb
examples/task_solver/: task_solver_examples.ipynb
sziaaitls/components/llm_agents/: __init__.py  task_solver.py
sziaaitls/core/document_library/: chunkers.py  document_library.py  documents.py  parsers.py
sziaaitls/core/embedders/: embedding.py
sziaaitls/core/llms/: __init__.py  llm_completion.py  prompts.py
sziaaitls/core/rag_solutions/: __init__.py  simple_rag.py
sziaaitls/core/vector_stores/: __init__.py  vector_stores.py
sziaaitls/document_library/: __init__.py  crawlers.py  documents.py
sziaaitls/embedders/: __init__.py  text_embedders.py
sziaaitls/llms/: __init__.py  llm_completion.py
sziaaitls/rag_solutions/: simple_rag.py
sziaaitls/vector_stores/: vector_stores.py
tests/: test_basic.py
